--- a/ch01-ch02/button_click/index-1.html
+++ b/ch01-ch02/button_click/index-1.html
@@ -5,7 +5,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bacon.js/0.7.88/Bacon.min.js"></script>
 	<script>
-		var clickEventStream = $('#myButton').asEventStream('click');
+		var clickEventStream = Bacon.fromEvent(document.getElementById('myButton'),'click');
 		clickEventStream.onValue(function() {
 			console.log('Button clicked');
 		});
